--- a/app/src/main/res/layout/activity_publish_story.xml
+++ b/app/src/main/res/layout/activity_publish_story.xml
@@ -6,7 +6,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <com.google.android.material.appbar.AppBarLayout android:layout_height="?attr/actionBarSize"
+        <ProgressBar
+            android:id="@+id/pro_publish"
+            android:layout_width="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_height="wrap_content"
+            android:visibility="invisible" />
+
+        <com.google.android.material.appbar.AppBarLayout android:layout_height="?attr/actionBarSize"
         android:layout_width="match_parent" android:background="@drawable/android_background"
         android:id="@+id/app_bar_layout" android:theme="@style/AppTheme.AppBarOverlay">
 
@@ -49,7 +57,7 @@
         android:fontFamily="@font/ibm_plex_sans_bold" android:gravity="center" android:textColor="@color/black"
         android:textSize="25dp"/>
 
-    <p013de.hdodenhof.circleimageview.CircleImageView android:layout_height="200dp" android:layout_width="200dp"
+    <de.hdodenhof.circleimageview.CircleImageView android:layout_height="200dp" android:layout_width="200dp"
         android:id="@+id/circle_profile_publish" android:layout_marginTop="20dp" android:layout_centerHorizontal="true"
         android:src="@drawable/no_preview"/>
 
@@ -117,11 +125,7 @@
         android:paddingRight="10dp" android:layout_below="@+id/card_last" android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true" android:paddingLeft="10dp"/>
 
-    <ProgressBar android:layout_height="wrap_content" android:layout_width="wrap_content"
-        android:id="@+id/pro_publish" android:layout_centerHorizontal="true" android:layout_centerVertical="true"
-        android:visibility="invisible"/>
-
-</RelativeLayout>
+    </RelativeLayout>
 
 </ScrollView>
 
