--- a/app/src/main/res/layout/activity_writting2.xml
+++ b/app/src/main/res/layout/activity_writting2.xml
@@ -18,8 +18,10 @@
         android:layout_width="match_parent" android:id="@+id/feed_toolbar"
         app:popupTheme="@style/AppTheme.PopupOverlay" android:layout_weight="0.8"/>
 
-    <Button android:layout_height="wrap_content" android:layout_width="wrap_content"
-        android:background="@drawable/round_fill" android:id="@+id/btn_publish"
+    <Button android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:background="@drawable/round_fill"
+        android:id="@+id/btn_publish"
         android:layout_weight="0.2" android:text="Publish"/>
 
 </LinearLayout>
@@ -40,14 +42,21 @@
 
 
     <com.google.android.material.textfield.TextInputLayout android:layout_height="match_parent"
-        android:layout_width="match_parent" android:background="@drawable/edit_text_layout"
-        android:id="@+id/et_story2" android:layout_marginTop="20dp" style="@style/TextInputLayout"
+        android:layout_width="match_parent"
+        android:background="@drawable/edit_text_layout"
+        android:id="@+id/et_story2"
+        android:layout_marginTop="20dp"
+        style="@style/TextInputLayout"
         android:layout_below="@+id/tv_title_writting">
 
     <com.google.android.material.textfield.TextInputEditText android:layout_height="match_parent"
-        android:layout_width="match_parent" android:id="@+id/et_story"
-        android:fontFamily="@font/ibm_plex_sans_regular" android:textColor="@color/black" android:textSize="18sp"
-        style="@style/UpdateProfileEditText" android:inputType="none|text|textCapSentences|textMultiLine"
+        android:layout_width="match_parent"
+        android:id="@+id/et_story"
+        android:fontFamily="@font/ibm_plex_sans_regular"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        style="@style/UpdateProfileEditText"
+        android:inputType="none|text|textCapSentences|textMultiLine"
         android:hint="Story"/>
 
 </com.google.android.material.textfield.TextInputLayout>
